[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/SettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://recursos/Fonts/Mine-Regular_90_outline.tres" type="DynamicFont" id=2]
[ext_resource path="res://recursos/Fonts/OpenSans25.tres" type="DynamicFont" id=3]
[ext_resource path="res://recursos/Fonts/MineRegular_40_BlackWhite.tres" type="DynamicFont" id=4]
[ext_resource path="res://recursos/Fonts/Minecraftia-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://UI/CommingSoon.tscn" type="PackedScene" id=6]
[ext_resource path="res://recursos/Icons/MadeWithGodot.jpg" type="Texture" id=7]
[ext_resource path="res://UI/HowToPlay.tscn" type="PackedScene" id=8]
[ext_resource path="res://recursos/Fonts/MineRegular16_White.tres" type="DynamicFont" id=9]
[ext_resource path="res://recursos/Icons/antronomo.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_editor_description_": "Añadir opciones para:
cambiar modo jugador/bots a los chars, cambiar color de los chars y pelota, y si eso de que acabamso añadiendo audios pues opciones para regular los sonidos"
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
margin_right = 1280.0
margin_bottom = 125.0
custom_fonts/font = ExtResource( 2 )
text = "SETTINGS"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 120.0
margin_right = -64.0
margin_bottom = -128.0
custom_fonts/font = SubResource( 1 )
tab_align = 0

[node name="Game" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 40.0
margin_right = -4.0
margin_bottom = -4.0

[node name="GameContainer" type="VBoxContainer" parent="TabContainer/Game"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_right = -4.0
margin_bottom = -6.0
focus_neighbour_top = NodePath("../../../SAE_button")

[node name="Character1" type="HBoxContainer" parent="TabContainer/Game/GameContainer"]
margin_right = 1128.0
margin_bottom = 41.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Game/GameContainer/Character1"]
margin_right = 969.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "CHARACTER 1"
valign = 1

[node name="Char1Mode" type="OptionButton" parent="TabContainer/Game/GameContainer/Character1"]
margin_left = 973.0
margin_right = 1128.0
margin_bottom = 41.0
focus_neighbour_top = NodePath("../../../../../SAE_button")
custom_fonts/font = ExtResource( 3 )
text = " PLAYER "
items = [ " PLAYER ", null, false, 0, null, " BOT ", null, false, 1, null ]
selected = 0

[node name="Character1Color" type="HBoxContainer" parent="TabContainer/Game/GameContainer"]
margin_top = 45.0
margin_right = 1128.0
margin_bottom = 86.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Game/GameContainer/Character1Color"]
margin_right = 463.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "CHARACTER 1 COLOR"
valign = 1

[node name="ColorRect" type="ColorRect" parent="TabContainer/Game/GameContainer/Character1Color"]
margin_left = 467.0
margin_right = 930.0
margin_bottom = 41.0
size_flags_horizontal = 3

[node name="Char1Color" type="Button" parent="TabContainer/Game/GameContainer/Character1Color"]
margin_left = 934.0
margin_right = 1128.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 3 )
text = " PICK COLOR "

[node name="Popup" type="Popup" parent="TabContainer/Game/GameContainer/Character1Color"]
margin_left = 1128.0
margin_right = 1444.0
margin_bottom = 420.0

[node name="Char1ColorPicker" type="ColorPicker" parent="TabContainer/Game/GameContainer/Character1Color/Popup"]
margin_left = -244.0
margin_top = 64.0
margin_right = 64.0
margin_bottom = 476.0
edit_alpha = false
presets_enabled = false
presets_visible = false

[node name="-SEPARADOR-" type="HBoxContainer" parent="TabContainer/Game/GameContainer"]
margin_top = 90.0
margin_right = 1128.0
margin_bottom = 138.0

[node name="Label" type="Label" parent="TabContainer/Game/GameContainer/-SEPARADOR-"]
margin_bottom = 48.0
text = "

"

[node name="Character2" type="HBoxContainer" parent="TabContainer/Game/GameContainer"]
margin_top = 142.0
margin_right = 1128.0
margin_bottom = 183.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Game/GameContainer/Character2"]
margin_top = 3.0
margin_right = 1026.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "CHARACTER 2"
valign = 1

[node name="Char2Mode" type="OptionButton" parent="TabContainer/Game/GameContainer/Character2"]
margin_left = 1030.0
margin_right = 1128.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 3 )
text = " BOT "
items = [ " PLAYER ", null, false, 0, null, " BOT ", null, false, 1, null ]
selected = 1

[node name="Character2Color" type="HBoxContainer" parent="TabContainer/Game/GameContainer"]
margin_top = 187.0
margin_right = 1128.0
margin_bottom = 228.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Game/GameContainer/Character2Color"]
margin_right = 463.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "CHARACTER 1 COLOR"
valign = 1

[node name="ColorRect" type="ColorRect" parent="TabContainer/Game/GameContainer/Character2Color"]
margin_left = 467.0
margin_right = 930.0
margin_bottom = 41.0
size_flags_horizontal = 3

[node name="Char2Color" type="Button" parent="TabContainer/Game/GameContainer/Character2Color"]
margin_left = 934.0
margin_right = 1128.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 3 )
text = " PICK COLOR "

[node name="Popup" type="Popup" parent="TabContainer/Game/GameContainer/Character2Color"]
margin_left = 1152.0
margin_right = 1468.0
margin_bottom = 420.0

[node name="Char2ColorPicker" type="ColorPicker" parent="TabContainer/Game/GameContainer/Character2Color/Popup"]
margin_left = -244.0
margin_top = 64.0
margin_right = 64.0
margin_bottom = 476.0
edit_alpha = false
presets_enabled = false
presets_visible = false

[node name="-SEPARADOR-2" type="HBoxContainer" parent="TabContainer/Game/GameContainer"]
margin_top = 232.0
margin_right = 1128.0
margin_bottom = 280.0

[node name="Label" type="Label" parent="TabContainer/Game/GameContainer/-SEPARADOR-2"]
margin_bottom = 48.0
text = "

"

[node name="BallColor" type="HBoxContainer" parent="TabContainer/Game/GameContainer"]
margin_top = 284.0
margin_right = 1128.0
margin_bottom = 325.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Game/GameContainer/BallColor"]
margin_right = 463.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = " BALL COLOR "
valign = 1

[node name="ColorRect" type="ColorRect" parent="TabContainer/Game/GameContainer/BallColor"]
margin_left = 467.0
margin_right = 930.0
margin_bottom = 41.0
size_flags_horizontal = 3

[node name="BallColorBut" type="Button" parent="TabContainer/Game/GameContainer/BallColor"]
margin_left = 934.0
margin_right = 1128.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 3 )
text = " PICK COLOR "

[node name="Popup" type="Popup" parent="TabContainer/Game/GameContainer/BallColor"]
margin_left = 1152.0
margin_right = 1468.0
margin_bottom = 470.0

[node name="BallColorPicker" type="ColorPicker" parent="TabContainer/Game/GameContainer/BallColor/Popup"]
margin_left = -244.0
margin_top = 64.0
margin_right = 64.0
margin_bottom = 476.0
edit_alpha = false
presets_enabled = false
presets_visible = false

[node name="-SEPARADOR-3" type="HBoxContainer" parent="TabContainer/Game/GameContainer"]
margin_top = 329.0
margin_right = 1128.0
margin_bottom = 377.0

[node name="Label" type="Label" parent="TabContainer/Game/GameContainer/-SEPARADOR-3"]
margin_bottom = 48.0
text = "

"

[node name="WinCondition" type="HBoxContainer" parent="TabContainer/Game/GameContainer"]
margin_top = 381.0
margin_right = 1128.0
margin_bottom = 422.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Game/GameContainer/WinCondition"]
margin_top = 3.0
margin_right = 963.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "WIN CONDITION"
valign = 1

[node name="GoalsToWin" type="OptionButton" parent="TabContainer/Game/GameContainer/WinCondition"]
margin_left = 967.0
margin_right = 1128.0
margin_bottom = 41.0
focus_neighbour_bottom = NodePath("../../../../../SAE_button")
custom_fonts/font = ExtResource( 3 )
text = " 3 GOALS "
items = [ " INFINITE  ", null, false, 0, null, " 1 GOAL ", null, false, 1, null, " 2 GOALS  ", null, false, 2, null, " 3 GOALS ", null, false, 3, null, " 4 GOALS ", null, false, 4, null, " 5 GOALS ", null, false, 5, null ]
selected = 3

[node name="Label" type="Label" parent="TabContainer/Game"]
modulate = Color( 1, 1, 1, 0.498039 )
margin_left = 12.0
margin_top = 464.0
margin_right = 319.0
margin_bottom = 537.0
custom_fonts/font = ExtResource( 3 )
text = "Press ESC button to 
hide ColorPicker"

[node name="Window" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 40.0
margin_right = -4.0
margin_bottom = -4.0

[node name="CommingSoon" parent="TabContainer/Window" instance=ExtResource( 6 )]
visible = true
margin_left = -230.0
margin_top = -41.5
margin_right = 230.0
margin_bottom = 41.5
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 225.902, 39.5901 )

[node name="Sound" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 40.0
margin_right = -4.0
margin_bottom = -4.0

[node name="SoundContainer" type="VBoxContainer" parent="TabContainer/Sound"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 16.0
margin_right = -20.0
margin_bottom = -28.0

[node name="MasterVolume" type="HBoxContainer" parent="TabContainer/Sound/SoundContainer"]
margin_right = 1104.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Sound/SoundContainer/MasterVolume"]
margin_top = 4.0
margin_right = 318.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 9 )
text = "Master Volume"

[node name="SlideLabel" type="Label" parent="TabContainer/Sound/SoundContainer/MasterVolume"]
margin_left = 322.0
margin_top = 4.0
margin_right = 641.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 9 )
text = "100%"
align = 2

[node name="MasterSlider" type="HSlider" parent="TabContainer/Sound/SoundContainer/MasterVolume"]
margin_left = 645.0
margin_right = 963.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 1.0

[node name="LabelSeparator" type="Label" parent="TabContainer/Sound/SoundContainer/MasterVolume"]
margin_left = 967.0
margin_top = 8.0
margin_right = 1015.0
margin_bottom = 22.0
text = "            "

[node name="MasterCheckBox" type="CheckBox" parent="TabContainer/Sound/SoundContainer/MasterVolume"]
margin_left = 1019.0
margin_right = 1103.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 9 )
text = "Muted"

[node name="-SEPARADOR-" type="HBoxContainer" parent="TabContainer/Sound/SoundContainer"]
margin_top = 34.0
margin_right = 1104.0
margin_bottom = 65.0

[node name="Label" type="Label" parent="TabContainer/Sound/SoundContainer/-SEPARADOR-"]
margin_bottom = 31.0
text = "
"

[node name="SoundEffect" type="HBoxContainer" parent="TabContainer/Sound/SoundContainer"]
margin_top = 69.0
margin_right = 1104.0
margin_bottom = 99.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Sound/SoundContainer/SoundEffect"]
margin_top = 4.0
margin_right = 318.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 9 )
text = "Sound Effects"

[node name="SlideLabel" type="Label" parent="TabContainer/Sound/SoundContainer/SoundEffect"]
margin_left = 322.0
margin_top = 4.0
margin_right = 641.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 9 )
text = "100%"
align = 2

[node name="SoundSlider" type="HSlider" parent="TabContainer/Sound/SoundContainer/SoundEffect"]
margin_left = 645.0
margin_right = 963.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 1.0

[node name="LabelSeparator" type="Label" parent="TabContainer/Sound/SoundContainer/SoundEffect"]
margin_left = 967.0
margin_top = 8.0
margin_right = 1015.0
margin_bottom = 22.0
text = "            "

[node name="SoundCheckBox" type="CheckBox" parent="TabContainer/Sound/SoundContainer/SoundEffect"]
margin_left = 1019.0
margin_right = 1103.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 9 )
text = "Muted"

[node name="-SEPARADOR-2" type="HBoxContainer" parent="TabContainer/Sound/SoundContainer"]
margin_top = 103.0
margin_right = 1104.0
margin_bottom = 134.0

[node name="Label" type="Label" parent="TabContainer/Sound/SoundContainer/-SEPARADOR-2"]
margin_bottom = 31.0
text = "
"

[node name="MusicEffect" type="HBoxContainer" parent="TabContainer/Sound/SoundContainer"]
margin_top = 138.0
margin_right = 1104.0
margin_bottom = 168.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Sound/SoundContainer/MusicEffect"]
margin_top = 4.0
margin_right = 318.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 9 )
text = "Music"

[node name="SlideLabel" type="Label" parent="TabContainer/Sound/SoundContainer/MusicEffect"]
margin_left = 322.0
margin_top = 4.0
margin_right = 641.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 9 )
text = "100%"
align = 2

[node name="MusicSlider" type="HSlider" parent="TabContainer/Sound/SoundContainer/MusicEffect"]
margin_left = 645.0
margin_right = 963.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 1.0

[node name="LabelSeparator" type="Label" parent="TabContainer/Sound/SoundContainer/MusicEffect"]
margin_left = 967.0
margin_top = 8.0
margin_right = 1015.0
margin_bottom = 22.0
text = "            "

[node name="MusicCheckBox" type="CheckBox" parent="TabContainer/Sound/SoundContainer/MusicEffect"]
margin_left = 1019.0
margin_right = 1103.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 9 )
text = "Muted"

[node name="-SEPARADOR-3" type="HBoxContainer" parent="TabContainer/Sound/SoundContainer"]
margin_top = 172.0
margin_right = 1104.0
margin_bottom = 237.0

[node name="Label" type="Label" parent="TabContainer/Sound/SoundContainer/-SEPARADOR-3"]
margin_bottom = 65.0
text = "


"

[node name="CommingSoon" parent="TabContainer/Sound" instance=ExtResource( 6 )]
margin_left = -224.0
margin_top = -38.0
margin_right = 236.0
margin_bottom = 45.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 225.902, 39.5901 )

[node name="Label" type="Label" parent="TabContainer/Sound"]
modulate = Color( 1, 1, 1, 0.498039 )
margin_left = 60.0
margin_top = 280.0
margin_right = 606.0
margin_bottom = 353.0
custom_fonts/font = ExtResource( 3 )
text = "Currently the music control has no
 function because no song is playing"

[node name="About" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 40.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Label" type="Label" parent="TabContainer/About"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CommingSoon" parent="TabContainer/About" instance=ExtResource( 6 )]
margin_left = -230.0
margin_top = -41.5
margin_right = 230.0
margin_bottom = 41.5
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 225.902, 39.5901 )

[node name="MadeWithGodot" type="Sprite" parent="TabContainer/About"]
position = Vector2( 988, 352 )
texture = ExtResource( 7 )

[node name="Antronomo" type="Sprite" parent="TabContainer/About"]
position = Vector2( 828, 352 )
rotation = 0.383972
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 10 )

[node name="HowToPlay" parent="TabContainer/About" instance=ExtResource( 8 )]
margin_top = 24.0
margin_right = 420.0
margin_bottom = 371.0

[node name="SpecialTHX" parent="TabContainer/About" instance=ExtResource( 8 )]
margin_left = 516.0
margin_top = 136.0
margin_right = 1142.0
margin_bottom = 208.0
text = "Thanks to                                    community to keep me motivated 
to develop this game, without them it would take more time. 
rafalaJART"

[node name="Twitch" type="LinkButton" parent="TabContainer/About/SpecialTHX"]
modulate = Color( 0.596078, 0, 0.866667, 1 )
margin_left = 104.0
margin_right = 228.0
margin_bottom = 22.0
focus_mode = 2
custom_fonts/font = ExtResource( 9 )
text = "RAFA LAGOON"
underline = 1

[node name="About" parent="TabContainer/About" instance=ExtResource( 8 )]
margin_left = 524.0
margin_top = 24.0
margin_right = 1090.0
margin_bottom = 104.0
text = "As you may know, this game is totally free, you can download
the game on                   , also you can download the repository
on                  , im doing this for learning proposites."

[node name="ItchIO" type="LinkButton" parent="TabContainer/About/About"]
modulate = Color( 0.596078, 0, 0.866667, 1 )
margin_left = 120.0
margin_top = 24.0
margin_right = 188.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 9 )
text = "Itch.IO"
underline = 1

[node name="GitHub" type="LinkButton" parent="TabContainer/About/About"]
modulate = Color( 0.596078, 0, 0.866667, 1 )
margin_left = 32.0
margin_top = 48.0
margin_right = 92.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 9 )
text = "GitHub"
underline = 1

[node name="SAE_button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -192.0
margin_top = -104.0
margin_right = 190.0
margin_bottom = -21.0
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
custom_fonts/font = ExtResource( 4 )
text = " SAVE AND EXIT "

[node name="DefaultSettingsButton" type="Button" parent="."]
modulate = Color( 1, 0, 0, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -368.0
margin_top = -64.0
margin_right = -28.0
margin_bottom = -23.0
custom_fonts/font = ExtResource( 3 )
text = " DEFAULT SETTINGS"

[node name="BUG" type="Label" parent="."]
visible = false
margin_left = 958.0
margin_top = 641.0
margin_right = 1194.0
margin_bottom = 697.0
rect_rotation = -6.6
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 113.856, 12.167 )
custom_fonts/font = ExtResource( 9 )
text = "DISABLED DUE TO A BUGG!!"
align = 1
valign = 1

[connection signal="item_selected" from="TabContainer/Game/GameContainer/Character1/Char1Mode" to="." method="_on_Char1Mode_item_selected"]
[connection signal="pressed" from="TabContainer/Game/GameContainer/Character1Color/Char1Color" to="." method="_on_Char1Color_pressed"]
[connection signal="color_changed" from="TabContainer/Game/GameContainer/Character1Color/Popup/Char1ColorPicker" to="." method="_on_Char1ColorPicker_color_changed"]
[connection signal="item_selected" from="TabContainer/Game/GameContainer/Character2/Char2Mode" to="." method="_on_Char2Mode_item_selected"]
[connection signal="pressed" from="TabContainer/Game/GameContainer/Character2Color/Char2Color" to="." method="_on_Char2Color_pressed"]
[connection signal="color_changed" from="TabContainer/Game/GameContainer/Character2Color/Popup/Char2ColorPicker" to="." method="_on_Char2ColorPicker_color_changed"]
[connection signal="pressed" from="TabContainer/Game/GameContainer/BallColor/BallColorBut" to="." method="_on_BallColorBut_pressed"]
[connection signal="color_changed" from="TabContainer/Game/GameContainer/BallColor/Popup/BallColorPicker" to="." method="_on_BallColorPicker_color_changed"]
[connection signal="item_selected" from="TabContainer/Game/GameContainer/WinCondition/GoalsToWin" to="." method="_on_GoalsToWin_item_selected"]
[connection signal="value_changed" from="TabContainer/Sound/SoundContainer/MasterVolume/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="toggled" from="TabContainer/Sound/SoundContainer/MasterVolume/MasterCheckBox" to="." method="_on_MasterCheckBox_toggled"]
[connection signal="value_changed" from="TabContainer/Sound/SoundContainer/SoundEffect/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="toggled" from="TabContainer/Sound/SoundContainer/SoundEffect/SoundCheckBox" to="." method="_on_SoundCheckBox_toggled"]
[connection signal="value_changed" from="TabContainer/Sound/SoundContainer/MusicEffect/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="toggled" from="TabContainer/Sound/SoundContainer/MusicEffect/MusicCheckBox" to="." method="_on_MusicCheckBox_toggled"]
[connection signal="pressed" from="TabContainer/About/SpecialTHX/Twitch" to="." method="_on_Twitch_pressed"]
[connection signal="pressed" from="TabContainer/About/About/ItchIO" to="." method="_on_ItchIO_pressed"]
[connection signal="pressed" from="TabContainer/About/About/GitHub" to="." method="_on_GitHub_pressed"]
[connection signal="pressed" from="SAE_button" to="." method="_on_SAE_button_pressed"]
[connection signal="pressed" from="DefaultSettingsButton" to="." method="_on_DefaultSettingsButton_pressed"]
